fix: Header spacing without images

--- a/src/styles/features/Head.styl
+++ b/src/styles/features/Head.styl
@@ -23,6 +23,7 @@ div.head {
         &.only {
             width: 100%;
             text-align: center;
+            margin-top: 30px
         }
 
         flex-grow: 0;
